--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.101.100.2:3306/my_db?characterEncoding=utf-8&useSSL=false&useTimezone=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+    url: jdbc:mysql://10.101.100.2:3306/xin_Chat?characterEncoding=utf-8&useSSL=false&useTimezone=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
     username: root
     password: 123
     # Redis 配置
@@ -118,6 +118,8 @@ log:
 admin:
   email: shuaishuai_li@qq.com
 
+ws:
+  port: 8104
 
 ############## Sa-Token 配置 (文档: https://sa-token.cc) ##############
 sa-token:
