添加好友查看好友列表，通过自定义sql语句实现了多表查询

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
