--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.28</version>
         </dependency>
+        <!-- 缓存管理大师 -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.9.3</version>
+        </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
