--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,6 @@ spring:
     username: root
     password: 123
     # Redis 配置
-    # todo 需替换配置，然后取消注释
   redis:
     database: 3
     host: 10.101.100.2
@@ -35,6 +34,12 @@ spring:
           max-idle: 10
           # 连接池中的最小空闲连接
           min-idle: 0
+  rabbitmq:
+    username: xin
+    password: lijun456789
+    host: 10.101.100.2
+    port: 5672
+    virtual-host: xinchat
   # 文件上传
   servlet:
     multipart:
