--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,10 +50,8 @@ server:
   port: 8101
   servlet:
     context-path: /api
-    # cookie 30 天过期
-    session:
-      cookie:
-        max-age: 2592000
+  tomcat:
+    connection-timeout: 60000
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
