消息队列和文件路径处理的一系列优化：
- 移除未使用的AI管理器bean注入。
- 修正文件路径设置，从使用filePath改为fileUrl。
-增加新的FILE类型支持，用于文件上传业务。
- 重构RabbitMQ配置，明确队列名称和持久化属性。
-增强消息处理逻辑，包括消息确认和错误处理。

BREAKING CHANGE: 重新排列了RabbitMQ队列绑定和交换机配置，必须确保RabbitMQ服务的配置同步更新。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,9 @@ spring:
     host: 10.101.100.2
     port: 5672
     virtual-host: xinchat
+    listener:
+      direct:
+        acknowledge-mode: manual
   # 文件上传
   servlet:
     multipart:
