--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,10 +68,10 @@ mybatis-plus:
 # todo 需替换配置
 cos:
   client:
-    accessKey: xxx
-    secretKey: xxx
-    region: xxx
-    bucket: xxx
+    accessKey: AKIDJYgcQ3TfxRlu150veBVcUIvGSYeZHNcz
+    secretKey: ymhiYTJH8sRt9Y5Vl5SycUGuY1NXTBgx
+    region: ap-beijing
+    bucket: xinbo-1314980040
 # 接口文档配置
 knife4j:
   enable: true
@@ -105,7 +105,6 @@ yuapi:
   client:
     access-key: xxxx
     secret-key: xxxx
-
 ############## Sa-Token 配置 (文档: https://sa-token.cc) ##############
 sa-token:
   # token 名称（同时也是 cookie 名称）
