--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,7 +65,13 @@ mybatis-plus:
       logic-delete-value: 1 # 逻辑已删除值（默认为 1）
       logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
 # 对象存储
-
+# todo 需替换配置
+cos:
+  client:
+    accessKey: xxxxx
+    secretKey: xxxxx
+    region: xxxxx
+    bucket: xxxxx
 # 接口文档配置
 knife4j:
   enable: true
